src/recall/src/recall/parser/RelativizedCLParser.java
// Generated from RelativizedCL.g4 by ANTLR 4.5

  package recall.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.ArrayList;
import recall.model.actions.Action;
import recall.model.actions.ActionOperator;
import recall.model.actions.BasicAction;
import recall.model.actions.ComposedAction;
import recall.model.contracts.BooleanClause;
import recall.model.contracts.Clause;
import recall.model.contracts.ClauseComposition;
import recall.model.contracts.ClauseCompositionType;
import recall.model.contracts.Conflict;
import recall.model.contracts.ConflictType;
import recall.model.contracts.Contract;
import recall.model.contracts.DeonticClause;
import recall.model.contracts.DeonticClauseType;
import recall.model.contracts.DynamicClause;
import recall.model.contracts.RelativizationType;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RelativizedCLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONFLICT=1, GLOBAL=2, RELATIVIZED=3, OPEN_PTY=4, CLOSE_PTY=5, OPEN_REL=6, 
		SEP_REL=7, CLOSE_REL=8, OPEN_EXP=9, CLOSE_EXP=10, OPEN_DYN=11, CLOSE_DYN=12, 
		DEO_O=13, DEO_P=14, DEO_F=15, OP_CHOICE=16, OP_SEQ=17, OP_CONC=18, UN_OP_IT=19, 
		UN_OP_NEG=20, AND=21, OR=22, XOR=23, T=24, F=25, ID=26, SKIP=27, VIOLATION=28, 
		END=29, COMMENT=30, LINE_COMMENT=31, WS=32;
	public static final int
		RULE_contract = 0, RULE_conflict = 1, RULE_cfGlobal = 2, RULE_cfRel = 3, 
		RULE_cfPair = 4, RULE_clause = 5, RULE_penalty = 6, RULE_cd = 7, RULE_co = 8, 
		RULE_cp = 9, RULE_cf = 10, RULE_rel = 11, RULE_alpha = 12, RULE_beta = 13, 
		RULE_op = 14;
	public static final String[] ruleNames = {
		"contract", "conflict", "cfGlobal", "cfRel", "cfPair", "clause", "penalty", 
		"cd", "co", "cp", "cf", "rel", "alpha", "beta", "op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'conflict'", "'global'", "'relativized'", "'_/'", "'/_'", "'{'", 
		"','", "'}'", "'('", "')'", "'['", "']'", null, null, null, "'+'", "'.'", 
		"'&'", "'*'", "'!'", null, null, null, "'true'", "'false'", null, "'1'", 
		"'0'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CONFLICT", "GLOBAL", "RELATIVIZED", "OPEN_PTY", "CLOSE_PTY", "OPEN_REL", 
		"SEP_REL", "CLOSE_REL", "OPEN_EXP", "CLOSE_EXP", "OPEN_DYN", "CLOSE_DYN", 
		"DEO_O", "DEO_P", "DEO_F", "OP_CHOICE", "OP_SEQ", "OP_CONC", "UN_OP_IT", 
		"UN_OP_NEG", "AND", "OR", "XOR", "T", "F", "ID", "SKIP", "VIOLATION", 
		"END", "COMMENT", "LINE_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RelativizedCL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	   ArrayList<Conflict> globalCNF = new  ArrayList<Conflict>();
	   ArrayList<Conflict> relCNF = new  ArrayList<Conflict>();

	public RelativizedCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ContractContext extends ParserRuleContext {
		public Contract c;
		public ClauseContext c1;
		public ClauseContext c2;
		public ConflictContext conflict() {
			return getRuleContext(ConflictContext.class,0);
		}
		public List<TerminalNode> END() { return getTokens(RelativizedCLParser.END); }
		public TerminalNode END(int i) {
			return getToken(RelativizedCLParser.END, i);
		}
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public ContractContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contract; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterContract(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitContract(this);
		}
	}

	public final ContractContext contract() throws RecognitionException {
		ContractContext _localctx = new ContractContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_contract);
		try {
			int _alt;
			setState(49);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				conflict();
				setState(31);
				((ContractContext)_localctx).c1 = clause(0);
				setState(32);
				match(END);
				((ContractContext)_localctx).c =  new Contract(((ContractContext)_localctx).c1.c); _localctx.c.setConflicts(globalCNF, relCNF); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				conflict();
				setState(36);
				((ContractContext)_localctx).c1 = clause(0);
				((ContractContext)_localctx).c =  new Contract(((ContractContext)_localctx).c1.c); _localctx.c.setConflicts(globalCNF, relCNF); 
				setState(44);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(38);
						match(END);
						setState(39);
						((ContractContext)_localctx).c2 = clause(0);
						_localctx.c.addClause(((ContractContext)_localctx).c2.c);
						}
						} 
					}
					setState(46);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(47);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConflictContext extends ParserRuleContext {
		public TerminalNode CONFLICT() { return getToken(RelativizedCLParser.CONFLICT, 0); }
		public CfGlobalContext cfGlobal() {
			return getRuleContext(CfGlobalContext.class,0);
		}
		public CfRelContext cfRel() {
			return getRuleContext(CfRelContext.class,0);
		}
		public TerminalNode END() { return getToken(RelativizedCLParser.END, 0); }
		public ConflictContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conflict; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterConflict(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitConflict(this);
		}
	}

	public final ConflictContext conflict() throws RecognitionException {
		ConflictContext _localctx = new ConflictContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_conflict);
		try {
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(CONFLICT);
				setState(52);
				match(OPEN_REL);
				setState(53);
				cfGlobal();
				setState(54);
				cfRel();
				setState(55);
				match(CLOSE_REL);
				setState(56);
				match(END);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(CONFLICT);
				setState(59);
				match(OPEN_REL);
				setState(60);
				cfRel();
				setState(61);
				cfGlobal();
				setState(62);
				match(CLOSE_REL);
				setState(63);
				match(END);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CfGlobalContext extends ParserRuleContext {
		public CfPairContext p1;
		public CfPairContext p2;
		public TerminalNode GLOBAL() { return getToken(RelativizedCLParser.GLOBAL, 0); }
		public TerminalNode END() { return getToken(RelativizedCLParser.END, 0); }
		public List<CfPairContext> cfPair() {
			return getRuleContexts(CfPairContext.class);
		}
		public CfPairContext cfPair(int i) {
			return getRuleContext(CfPairContext.class,i);
		}
		public CfGlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cfGlobal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterCfGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitCfGlobal(this);
		}
	}

	public final CfGlobalContext cfGlobal() throws RecognitionException {
		CfGlobalContext _localctx = new CfGlobalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cfGlobal);
		int _la;
		try {
			setState(85);
			switch (_input.LA(1)) {
			case GLOBAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(GLOBAL);
				setState(69);
				match(OPEN_REL);
				setState(70);
				((CfGlobalContext)_localctx).p1 = cfPair();
				 globalCNF.add(new Conflict(((CfGlobalContext)_localctx).p1.a, ((CfGlobalContext)_localctx).p1.b, ConflictType.GLOBAL));
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEP_REL) {
					{
					{
					setState(72);
					match(SEP_REL);
					setState(73);
					((CfGlobalContext)_localctx).p2 = cfPair();
					 globalCNF.add(new Conflict(((CfGlobalContext)_localctx).p2.a, ((CfGlobalContext)_localctx).p2.b, ConflictType.GLOBAL));
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(CLOSE_REL);
				setState(82);
				match(END);
				}
				break;
			case RELATIVIZED:
			case CLOSE_REL:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CfRelContext extends ParserRuleContext {
		public CfPairContext p1;
		public CfPairContext p2;
		public TerminalNode RELATIVIZED() { return getToken(RelativizedCLParser.RELATIVIZED, 0); }
		public TerminalNode END() { return getToken(RelativizedCLParser.END, 0); }
		public List<CfPairContext> cfPair() {
			return getRuleContexts(CfPairContext.class);
		}
		public CfPairContext cfPair(int i) {
			return getRuleContext(CfPairContext.class,i);
		}
		public CfRelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cfRel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterCfRel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitCfRel(this);
		}
	}

	public final CfRelContext cfRel() throws RecognitionException {
		CfRelContext _localctx = new CfRelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cfRel);
		int _la;
		try {
			setState(104);
			switch (_input.LA(1)) {
			case RELATIVIZED:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(RELATIVIZED);
				setState(88);
				match(OPEN_REL);
				setState(89);
				((CfRelContext)_localctx).p1 = cfPair();
				relCNF.add(new Conflict(((CfRelContext)_localctx).p1.a, ((CfRelContext)_localctx).p1.b, ConflictType.RELATIVIZED));
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEP_REL) {
					{
					{
					setState(91);
					match(SEP_REL);
					setState(92);
					((CfRelContext)_localctx).p2 = cfPair();
					relCNF.add(new Conflict(((CfRelContext)_localctx).p2.a, ((CfRelContext)_localctx).p2.b, ConflictType.RELATIVIZED));
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(CLOSE_REL);
				setState(101);
				match(END);
				}
				break;
			case GLOBAL:
			case CLOSE_REL:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CfPairContext extends ParserRuleContext {
		public BasicAction a;
		public BasicAction b;
		public Token id1;
		public Token id2;
		public List<TerminalNode> ID() { return getTokens(RelativizedCLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RelativizedCLParser.ID, i);
		}
		public CfPairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cfPair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterCfPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitCfPair(this);
		}
	}

	public final CfPairContext cfPair() throws RecognitionException {
		CfPairContext _localctx = new CfPairContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cfPair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(OPEN_EXP);
			setState(107);
			((CfPairContext)_localctx).id1 = match(ID);
			setState(108);
			match(SEP_REL);
			setState(109);
			((CfPairContext)_localctx).id2 = match(ID);
			setState(110);
			match(CLOSE_EXP);

			                ((CfPairContext)_localctx).a =  new BasicAction(SymbolTable.getInstance().addSymbol((((CfPairContext)_localctx).id1!=null?((CfPairContext)_localctx).id1.getText():null), SymbolType.action));
			                ((CfPairContext)_localctx).b =  new BasicAction(SymbolTable.getInstance().addSymbol((((CfPairContext)_localctx).id2!=null?((CfPairContext)_localctx).id2.getText():null), SymbolType.action));
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseContext extends ParserRuleContext {
		public Clause c;
		public ClauseContext c1;
		public CoContext co;
		public CpContext cp;
		public CfContext cf;
		public CdContext cd;
		public ClauseContext c2;
		public CoContext co() {
			return getRuleContext(CoContext.class,0);
		}
		public CpContext cp() {
			return getRuleContext(CpContext.class,0);
		}
		public CfContext cf() {
			return getRuleContext(CfContext.class,0);
		}
		public CdContext cd() {
			return getRuleContext(CdContext.class,0);
		}
		public TerminalNode T() { return getToken(RelativizedCLParser.T, 0); }
		public TerminalNode F() { return getToken(RelativizedCLParser.F, 0); }
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public TerminalNode AND() { return getToken(RelativizedCLParser.AND, 0); }
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitClause(this);
		}
	}

	public final ClauseContext clause() throws RecognitionException {
		return clause(0);
	}

	private ClauseContext clause(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ClauseContext _localctx = new ClauseContext(_ctx, _parentState);
		ClauseContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_clause, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(114);
				((ClauseContext)_localctx).co = co(0);
				((ClauseContext)_localctx).c =  ((ClauseContext)_localctx).co.c;
				}
				break;
			case 2:
				{
				setState(117);
				((ClauseContext)_localctx).cp = cp(0);
				((ClauseContext)_localctx).c =  ((ClauseContext)_localctx).cp.c;
				}
				break;
			case 3:
				{
				setState(120);
				((ClauseContext)_localctx).cf = cf(0);
				((ClauseContext)_localctx).c =  ((ClauseContext)_localctx).cf.c;
				}
				break;
			case 4:
				{
				setState(123);
				((ClauseContext)_localctx).cd = cd();
				((ClauseContext)_localctx).c =  ((ClauseContext)_localctx).cd.c;
				}
				break;
			case 5:
				{
				setState(126);
				match(T);
				((ClauseContext)_localctx).c =  BooleanClause.TRUE;
				}
				break;
			case 6:
				{
				setState(128);
				match(F);
				((ClauseContext)_localctx).c =  BooleanClause.FALSE;
				}
				break;
			case 7:
				{
				setState(130);
				match(OPEN_EXP);
				setState(131);
				((ClauseContext)_localctx).c1 = clause(0);
				setState(132);
				match(CLOSE_EXP);
				((ClauseContext)_localctx).c =  ((ClauseContext)_localctx).c1.c;
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ClauseContext(_parentctx, _parentState);
					_localctx.c1 = _prevctx;
					_localctx.c1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_clause);
					setState(137);
					if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
					setState(138);
					match(AND);
					setState(139);
					((ClauseContext)_localctx).c2 = clause(9);

					                        ((ClauseContext)_localctx).c2.c.setComposition(new ClauseComposition(ClauseCompositionType.AND, ((ClauseContext)_localctx).c1.c));
					                        ((ClauseContext)_localctx).c =  ((ClauseContext)_localctx).c2.c;
					                       
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PenaltyContext extends ParserRuleContext {
		public Clause c;
		public ClauseContext clause;
		public TerminalNode OPEN_PTY() { return getToken(RelativizedCLParser.OPEN_PTY, 0); }
		public ClauseContext clause() {
			return getRuleContext(ClauseContext.class,0);
		}
		public TerminalNode CLOSE_PTY() { return getToken(RelativizedCLParser.CLOSE_PTY, 0); }
		public PenaltyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_penalty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterPenalty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitPenalty(this);
		}
	}

	public final PenaltyContext penalty() throws RecognitionException {
		PenaltyContext _localctx = new PenaltyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_penalty);
		try {
			setState(153);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(OPEN_PTY);
				setState(148);
				((PenaltyContext)_localctx).clause = clause(0);
				setState(149);
				match(CLOSE_PTY);
				((PenaltyContext)_localctx).c =  ((PenaltyContext)_localctx).clause.c;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((PenaltyContext)_localctx).c =  BooleanClause.FALSE;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CdContext extends ParserRuleContext {
		public DynamicClause c;
		public RelContext rel;
		public BetaContext beta;
		public ClauseContext clause;
		public RelContext rel() {
			return getRuleContext(RelContext.class,0);
		}
		public TerminalNode OPEN_DYN() { return getToken(RelativizedCLParser.OPEN_DYN, 0); }
		public BetaContext beta() {
			return getRuleContext(BetaContext.class,0);
		}
		public TerminalNode CLOSE_DYN() { return getToken(RelativizedCLParser.CLOSE_DYN, 0); }
		public TerminalNode OPEN_EXP() { return getToken(RelativizedCLParser.OPEN_EXP, 0); }
		public ClauseContext clause() {
			return getRuleContext(ClauseContext.class,0);
		}
		public TerminalNode CLOSE_EXP() { return getToken(RelativizedCLParser.CLOSE_EXP, 0); }
		public CdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).enterCd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelativizedCLListener ) ((RelativizedCLListener)listener).exitCd(this);
		}
	}

	public final CdContext cd() throws RecognitionException {
		CdContext _localctx = new CdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cd);
		try {
			setState(170);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				((CdContext)_localctx).rel = rel();
				setState(156);
				match(OPEN_DYN);
				setState(157);
				((CdContext)_localctx).beta = beta(0);
				setState(158);
				match(CLOSE_DYN);
				setState(159);
				match(OPEN_EXP);
				setState(160);
				((CdContext)_localctx).clause = clause(0);
				setState(161);
				match(CLOSE_EXP);
